--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -39,6 +39,10 @@ jobs:
           product-version: 0.0.0.1
           file-description: RandPicker 更新助理
 
+      - name: Pre-Upload
+        run: |
+          xcopy build\Updater.exe .\
+
       - name: Upload
         uses: actions/upload-artifact@v4.4.2
         with:
