--- a/.gitignore
+++ b/.gitignore
@@ -121,9 +121,8 @@ celerybeat.pid
 
 # Environments
 .env
-.venv
 env/
-venv/
+*venv/
 ENV/
 env.bak/
 venv.bak/
@@ -134,6 +133,9 @@ venv.bak/
 
 # Rope project settings
 .ropeproject
+
+# Visual Studio Code project settings
+.vscode/
 
 # mkdocs documentation
 /site
