--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -60,5 +60,5 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v4.4.2
         with:
-          name: RandPicker
+          name: RandPicker-Updater
           path: Updater.exe
