--- a/.github/workflows/build_nuitka_for_debug.yml
+++ b/.github/workflows/build_nuitka_for_debug.yml
@@ -1,10 +1,7 @@
-name: Build with Nuitka (Production)
+name: Build with Nuitka (Debug Only)
 
 on:
   workflow_dispatch:
-  push:
-    tags:
-      - v*
 
 concurrency:
   group: build-${{ github.ref }}
@@ -29,17 +26,6 @@ jobs:
         run: |
           pip install -r requirements.txt
 
-      - name: Set version
-        id: set_version
-        shell: bash
-        run: |
-          if [[ "${GITHUB_REF}" == refs/tags/v* ]]; then
-            tag_name="${GITHUB_REF#refs/tags/}"
-            echo "version=${tag_name:1}" >> $GITHUB_ENV
-          else
-            echo "version=0.0.0.1" >> $GITHUB_ENV
-          fi
-
       - name: Build
         uses: Nuitka/Nuitka-Action@main
         with:
@@ -58,5 +44,5 @@ jobs:
       - name: Upload
         uses: actions/upload-artifact@v4.4.2
         with:
-          name: RandPicker-Updater
+          name: RP-Updater-Debug-N
           path: Updater.exe
